--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,27 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --brand-color1: #eda21e;
+  --brand-color1-50: #fff8e5;
+  --brand-color1-100: #ffedcc;
+  --brand-color1-200: #ffe0a8;
+  --brand-color1-300: #ffd280;
+  --brand-color1-400: #ffc359;
+  --brand-color1-500: #ffb338; /* Original Color or close */
+  --brand-color1-700: #d18500;
+  --brand-color1-800: #b06c00;
+  --brand-color1-900: #8f5700;
+
+  --brand-color2: #edc51d;
+  --brand-color2-50: #fff9e5;
+  --brand-color2-100: #ffefcc;
+  --brand-color2-200: #ffe5a3;
+  --brand-color2-300: #ffda7a;
+  --brand-color2-400: #ffcf53;
+  --brand-color2-500: #f7c231; /* Original Color or close */
+  --brand-color2-700: #d0a800;
+  --brand-color2-800: #aa8400;
+  --brand-color2-900: #846600;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -16,18 +37,92 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+}
+
+.animate-slide {
+  animation: slide 2.5s ease-out infinite;
+}
+@keyframes slide {
+  0% {
+    transform: translateY(20px);
+    opacity: 0;
+  }
+  20%,
+  25%,
+  30%,
+  35%,
+  40%,
+  45%,
+  50%,
+  55%,
+  60%,
+  70%,
+  75%,
+  80% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+
+  100% {
+    transform: translateY(-8px);
+    opacity: 0;
+  }
+}
+
+@-webkit-keyframes slideUpDown {
+  0% {
+    transform: translateY(20px);
+    opacity: 0;
+  }
+  20%,
+  25%,
+  30%,
+  35%,
+  40%,
+  45%,
+  50%,
+  55%,
+  60%,
+  70%,
+  75%,
+  80% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+
+  100% {
+    transform: translateY(-8px);
+    opacity: 0;
+  }
+}
+
+@-moz-keyframes slideUpDown {
+  0% {
+    transform: translateY(20px);
+    opacity: 0;
+  }
+  20%,
+  25%,
+  30%,
+  35%,
+  40%,
+  45%,
+  50%,
+  55%,
+  60%,
+  70%,
+  75%,
+  80% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+
+  100% {
+    transform: translateY(-8px);
+    opacity: 0;
   }
 }
